# SashimiDB

./: .CHEATSHEET  .gitignore  Dockerfile  README.md  exact-old.yml  exact.py  exact.yml  exactapp.py  mkdocs.yml  pyproject.toml  requirements.txt  sashimiapp.py
doc/: CONFIG.md  QUERY.md  SECURITY.md
docker/: Dockerfile  exact-docker.yml  exact.yml  requirements.txt  start.sh  tires.json  tires2.json
docs/: CONFIG.md  QUERY.md  TROUBLESHOOTING.md  index.md
exact/: config.py  dataset.py  prettyjson.py  project.py  searchquery.py
exact/api/: params.py  project.py  utils.py
projects/my/data/: products.json
projects/my/etc/: products.yml
projects/sandbox/: __project.yml  _products.yaml
projects/sandbox/etc/: _exact.yml
projects/test/: __project.yml  products.json
sashimi/: __init__.py  config.py  dataset.py  defdict.py  exception.py  project.py
sashimi/api/: params.py  project.py  query.py
tests/: test_exact.py
