[tool.poetry]
name = "exact"
version = "0.1.0"
description = "Exact search engine"
authors = ["Yaroslav <yaroslaff@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
pyyaml = "^6.0"
evalidate = "^1.0.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
